Eliminate link to internal Notion site

--- a/mdx-pages/cyber-security-report.mdx
+++ b/mdx-pages/cyber-security-report.mdx
@@ -28,7 +28,7 @@ In this page, we step back from the daily barrage of incremental advances in AI 
 
 # Attack Chain Analysis
 
-This section of the report is an analysis of how current and future AIs will impact the volume of cybersecurity attacks. There are many different sorts of cyberattacks, involving different goals and techniques. We consider a series of attack scenarios. For each, we list the steps involved in an attack, and apply the methodology described in [The Cybersecurity Equilibrium](https://www.notion.so/The-Cybersecurity-Equilibrium-1274c916374a80e0a1cbee90308d4cd1?pvs=21) to forecast how AI is likely to impact that form of attack.
+This section of the report is an analysis of how current and future AIs will impact the volume of cybersecurity attacks. There are many different sorts of cyberattacks, involving different goals and techniques. We consider a series of attack scenarios. For each, we list the steps involved in an attack, and apply the methodology described in [The Cybersecurity Equilibrium](cyber-security-report/the-cybersecurity-equilibrium) to forecast how AI is likely to impact that form of attack.
 
 Read more: [Attack Chain Analyses](cyber-security-report/attack-chain-analyses)
 
